--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,7 @@
 name = "gpg-restart-agent"
 version = "0.1.0"
 authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
+edition = "2018"
 
 [dependencies]
+thiserror = "1.0.26"
